# ambivo_agents

./: .dockerignore  .gitignore  README.md  agent_config_sample.yaml  cli.py  pyproject.toml  requirements.txt  setup.py
ambivo_agents/: __init__.py  cli.py
ambivo_agents/agents/: __init__.py  assistant.py  code_executor.py  knowledge_base.py  media_editor.py  simple_web_search.py  web_scraper.py  web_search.py  youtube_download.py
ambivo_agents/config/: __init__.py  loader.py
ambivo_agents/core/: __init__.py  base.py  llm.py  memory.py
ambivo_agents/executors/: __init__.py  docker_executor.py  media_executor.py  youtube_executor.py
ambivo_agents/services/: __init__.py  agent_service.py  factory.py
examples/: basic_chat.py  configuration_examples.py  download_youtube_example.py  health_monitoring.py  knowledge_base_operations.py  media_audio_extraction.py  one_liner_examples.py  scraping_example.py  search_example.py  setup_examples_guide.md  simple_knowledge_base_examply.py  simple_search_example.py  specialized_agents.py  test_capabilities.py
